--- a/adeoweb/src/header.css
+++ b/adeoweb/src/header.css
@@ -1,15 +1,16 @@
 .header {
   background-color: #448ccb;
   color: white;
-  padding-left: 30vh;
-  padding-right: 30vh;
+  padding-left: 10%;
+  padding-right: 10%;
   padding-top: 10px;
   padding-bottom: 10px;
+  min-height: 20%;
 }
 .grid-header {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-rows: repeat(3, 1fr);
 }
 .grid-header-menu {
   grid-column-start: 1;
@@ -29,4 +30,33 @@
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
+}
+@media screen and (max-width: 1096px) {
+  .grid-header-navbar,
+  .grid-header-menu {
+    display: none;
+  }
+  .navbar-button {
+    display: block;
+    background-color: #2b689d;
+    width: 50px;
+    height: 50px;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    padding: 10px;
+    align-self: center;
+    border-radius: 10px;
+    justify-self: end;
+  }
+  .navbar-button-inside {
+    width: 20px;
+    height: 5px;
+    margin: 5px;
+    background-color: white;
+  }
+  .navbar-button-inside:nth-of-type(1) {
+    margin-top: 2px;
+  }
 }
